# commodity-data-lakehouse

./: .env.example  .gitignore  .sqlfluff  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: commodity_etl.py
airflow/include/: __init__.py
airflow/include/alerts/: __init__.py  slack_alert.py
airflow/include/extractors/: __init__.py  yfinance_extractor.py
airflow/include/loaders/: __init__.py  warehouse_loader.py
airflow/include/validators/: __init__.py  gx_validator.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: _fct_daily_snapshot.yml  fct_daily_snapshot.sql
dbt/models/staging/: _sources.yml  _stg_commodities.yml  stg_commodities.sql
dbt/tests/: assert_volatility_non_negative.sql
docs/: design.md  runbooks.md
great_expectations/: config_variables.yml  great_expectations.yml
great_expectations/checkpoints/: raw_validation.yml
great_expectations/expectations/: commodities_raw.json
lineage/: openlineage.yml
scripts/: bootstrap.sh  e2e_test.sh  run_gx_checkpoint.sh  seed_sample_data.py
tests/: conftest.py  test_e2e.py
